# SOEN-390-Project

./: .env.test  .gitignore  CONTRIBUTING.md  INSTALLATION.md  README.md  docker-compose.test.yml  docker-compose.yml  sonar-project.properties
backend/: .coveragerc  .pylintrc  Dockerfile  Makefile  conda_requirements.txt  db.sqlite3  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  soen390.yml
backend/backend/: settings.py  urls.py
backend/geojson_files/: building_boundaries.geojson
backend/location/: models.py  tests.py  views.py
backend/location/migrations/: 0001_initial.py  0002_initial.py  0003_alter_building_boundary.py
backend/location/services/: building_popup_info.py  buildings_load.py  location_utils.py
backend/location/tests/: test_location.py
backend/map/: models.py  tests.py  try.py  views.py
backend/map/migrations/: 0001_initial.py  0002_alter_campusmap_boundary.py
backend/map/services/: campus_import.py
backend/map/tests/: test_services.py
backend/myapp/: models.py  tests.py  views.py
backend/project/: asgi.py  routing.py  settings.py  urls.py
backend/route/: models.py  tests.py  views.py
backend/route/migrations/: 0001_initial.py
backend/route/services/: consumers.py  google_maps_service.py  route_utils.py
backend/route/tests/: test_consumers.py  test_maps.py  test_views.py
backend/scripts/: convert_pylint_to_sonar.py
backend/tests/: conftest.py
frontend/: .flutter-plugins  .flutter-plugins-dependencies  .gitignore  analysis_options.yaml  lint_report.txt  pubspec.yaml  pyproject.toml
frontend/.dart_tool/: package_config.json  package_config_subset
frontend/.dart_tool/build_resolvers/: sdk.sum.deps
frontend/.dart_tool/dartpad/: web_plugin_registrant.dart
frontend/.dart_tool/flutter_build/: dart_plugin_registrant.dart
frontend/android/: build.gradle  local.properties
frontend/android/app/: build.gradle
frontend/assets/: building_configs.json  friday_shuttle_bus_schedule.json  mappedin.html  mappedin.js  moday_to_thursaday_shuttle_bus_schedule.JSON
frontend/assets/geojson_files/: building_list.geojson  campus.geojson
frontend/coverage/: lcov.info
frontend/coverage/html/: index.html
frontend/frontend/.dart_tool/: package_config.json  package_config_subset
frontend/frontend/android/: local.properties
frontend/integration_test/: app_test.dart
frontend/ios/Runner/: AppDelegate.swift  GoogleService-Info.plist  Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart  test_google_route_service.dart  test_oauth.dart
frontend/lib/core/: secure_storage.dart
frontend/lib/models/: building_config.dart  calendar_event.dart  outdoor_poi.dart  places.dart  review.dart  route_query_options.dart  route_result.dart  step_result.dart
frontend/lib/providers/: navigation_provider.dart  service_providers.dart  theme_provider.dart
frontend/lib/repositories/: auth_repository.dart  (+2 more)
frontend/linux/: CMakeLists.txt
frontend/test/: campus_switch_button_test.dart  main_test.dart  main_test.mocks.dart  outdoor_map_test.dart  route_service_test.dart  search_bar_test.dart  theme_test.dart  user_location_util.dart  widget_test.dart
frontend/web/: index.html
frontend/windows/: CMakeLists.txt
(+670 files in other folders)
