[tool.poetry]
name = "soen-390-project"
version = "0.1.0"
description = ""
authors = ["KapJ1coH <tima.mtl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.10.0"
pytest = "^8.3.4"
pylint = "^3.3.3"
django = "^5.1.5"
pytest-django = "^4.9.0"

[tool.pylint."MASTER"]
ignore = ["__init__.py", "setup.py", "config.py"]
ignore-patterns = [".*/migrations/.*", ".*__pycache__/.*", ".*venv/.*", ".*.egg-info/.*", ".*.pyc"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
